# ros-repo-2

./: README.md
3d-modeling/sugoi-bot-3d-print/stl/: forklift-body.stl
3d_modeling/sugoi_bot_3d_print/stl/: aruco_marker_lidar_case.stl  forklift.stl  forklift_motor_hole_case.stl  forklift_servo_motor_case_hook.stl  pallet.stl  pallet_box.stl  pallet_rack.stl  picamera_hold.stl
Forklift Control/: test.txt
Forklift Control/color_detection/: color_detect_turn.py  color_detection.py
Forklift Control/motor_control/m3_dc_motot/: m3_dc_motot.ino
Forklift Control/pallet_detection/: qr_code.py
Forklift Control/pose_correction/: pose_correction.py
GUI/: test.txt
Server/ai_service/: main.py  udp_receiver.py
YOLO/: manual_convert_coco_to_yolo.py
db/src/: create_table.sql
forklift_control/src/: aruco_pickup.py  esp32_sequence.py
forklift_control/src/esp32_full_sequence_1/: esp32_full_sequence_1.ino
forklift_control/src/esp32_full_sequence_2/: esp32_full_sequence_2.ino
gui/src/sugoi_gui/: client.py  client.ui  client_check.py  client_check.ui  client_picture.ui  client_picutre.py  main.py  main.ui  manager_main.py  manager_main.ui  order_inout_2.py  order_inout_2.ui  order_main.py  order_main.ui  pc_pose_server.py  pc_pose_server_2.py
server/src/ai-service/: camera-udp-sender-plate.py  (+9 more)
slam_navigation/sugoi_bot_1/: final_map.pgm  final_map.yaml
slam_navigation/sugoi_bot_1/src/final_package/: package.xml  setup.py
slam_navigation/sugoi_bot_1/src/final_package/final_package/: aruco_drive_node.py  aruco_pickup_node.py  esp32_sequence_node.py  pose_client_node.py  task_to_waypoint_node.py  waypoint_base_node.py  wp0_node.py  wp1_node.py  wp2_node.py  wp3_node.py  wp4_node.py
slam_navigation/sugoi_bot_1/src/final_package/launch/: wp_all.launch.py
slam_navigation/sugoi_bot_2/: my_map.pgm  my_map.yaml
slam_navigation/sugoi_bot_2/src/sugoi_navigation/: package.xml  setup.cfg  setup.py
slam_navigation/sugoi_bot_2/src/sugoi_navigation/sugoi_navigation/: run_aruco_down.sh  run_esp32.sh  server_multi_nav_to_pose_forklift.py
yolo/: yolo_results_test.py
(+13 files in other folders)
