<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>sugoi_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="jubineduros@gmail.com">jubin</maintainer>
  <license>TODO: License declaration</license>

  <!-- 기본 실행 의존성 -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav2_msgs</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>

  <!-- ArUco 관련 추가 의존성 -->
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>image_transport</exec_depend>
  <exec_depend>python3-opencv</exec_depend>

  <!-- 테스트 관련 -->
  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
